--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <input type="text" placeholder="Enter Latitude" id="lat">
     <input type="text" placeholder="Enter Longitude" id="long">
     <button id="Submit">Go</button>
+    <h4>Inspect Console for Weather details after clicking GO</h4>
     <script src="weather_api.js"></script>
 </body>
 </html>
